# code_kg

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CodeKG_Analysis_Report.md  Dockerfile  LICENSE  README.md  app.py  codekg_report.md  codekg_results.json  commit.txt  docker-compose.yml  pyproject.old.toml  pyproject.toml  release-notes.md
.claude/agents/: cco.md  cw.md  do.md  doc.md  kc.md  me.md  qa.md  sd.md  sec.md  ta.md  uid.md  uids.md  uxd.md
.claude/commands/: changelog-commit.md  codekg-rebuild.md  continue.md  protocol.md  release.md  setup-mcp.md
.claude/skills/codekg/: SKILL.md  clinerules.md
.claude/skills/codekg-thorough-analysis/: SKILL.md
.claude/skills/codekg/references/: installation.md
.codekg/: graph.sqlite
.codekg/lancedb/codekg_nodes.lance/_transactions/: 0-2c094008-b219-46ee-8d00-9283615e0a79.txn  0-48ac0694-0492-4f2d-b278-2b9211e797fb.txn  0-c60a6704-4216-4af2-b51a-1d87eddbd5d6.txn  1-356e1d9d-d171-4b02-b336-97403f53c95c.txn  1-461d9a50-e994-497a-8879-15f23d769169.txn  1-6526cd66-28cd-4841-bf05-2cb0d1e16936.txn  2-4b02d0d6-7ba2-4342-a63a-f0ec3c04d005.txn  2-6b27b73b-6345-491e-b260-12b8e8720caa.txn  2-fa7b6241-4d71-4738-a52c-10f66904e458.txn  3-0c5fdf2e-ee58-43f3-9240-86ac6c495f71.txn  3-13496d32-97d1-4e30-b0cb-99a5f7283ed4.txn  3-d75c34c1-9c0f-4fda-92eb-ce79342ab142.txn  4-03c031b5-ced6-4e87-9b20-1894d2356cd1.txn  4-0d6443be-9a6f-4639-bd7e-3e2d6aa5a54b.txn  4-6b24a63f-1126-4608-b2f1-ef8a839ceff7.txn  5-688b1225-da3d-410e-abc2-5895bb9ea2c3.txn  5-93366341-27fc-45f4-8b4f-fa7f389e9d69.txn  5-93b9ea4d-184f-49a8-ae51-880d98753773.txn
.github/actions/codekg-action/: README.md  action.yml
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
article/: code_kg.tex
docs/: Architecture-brief.md  Architecture-plain.md  Architecture.md  CHEATSHEET.md  MCP.md  analysis_v0.3.1.md  code_kg.aux  code_kg.md  code_kg.out  code_kg.tex  code_kg_medium.md  code_kg_workflow.md  deployment.md  docker.md
scripts/: install-skill.sh  rebuild-codekg.sh
src/code_kg/: __init__.py  __main__.py  app.py  build_codekg_lancedb.py  build_codekg_lancedb_v0.py  build_codekg_sqlite.py  codekg.py  codekg_lancedb.py  codekg_lancedb_v0.py  codekg_query.py  codekg_query_v0.py  codekg_snippet_packer.py  codekg_snippet_packer_v0.py  codekg_sqlite.py  codekg_sqlite_v0.py  codekg_thorough_analysis.py  codekg_v0.py  codekg_viz.py  codekg_viz3d.py  graph.py  index.py  kg.py  layout3d.py  mcp_server.py  store.py  visitor.py  viz3d.py
tests/: test_codekg_v0.py  test_graph.py  test_index.py  test_kg.py  test_primitives.py  test_store.py  test_visitor.py
