[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "code-kg"
version = "0.1.0"
description = "A tool to build a searchable knowledge graph from Python repositories"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/suchanek/code_kg"
repository = "https://github.com/suchanek/code_kg"
keywords = ["knowledge-graph", "code-analysis", "ast", "lancedb", "sqlite", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "code_kg", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lancedb = ">=0.6.0"
numpy = ">=1.24.0"
sentence-transformers = ">=2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"

[tool.poetry.scripts]
codekg-build-sqlite  = "code_kg.build_codekg_sqlite:main"
codekg-build-lancedb = "code_kg.build_codekg_lancedb:main"
codekg-query         = "code_kg.codekg_query:main"
codekg-pack          = "code_kg.codekg_snippet_packer:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
