# CodeKG - Knowledge Graph Builder for Python Codebases
#
# CodeKG is a tool that builds searchable knowledge graphs from Python repositories.
# It analyzes Python code to extract semantic relationships between modules, classes,
# functions, and methods, creating a comprehensive graph representation that can be
# queried using natural language.
#
# Key Features:
# - AST-based code analysis with semantic understanding
# - Support for multiple storage backends (SQLite, LanceDB)
# - Natural language querying capabilities
# - Code snippet extraction and visualization
# - MCP (Model Context Protocol) server integration
# - Streamlit-based web interface for exploration
#
# The tool is designed for developers who want to understand large codebases,
# perform code analysis, or build AI-powered development tools.

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "code-kg"
version = "0.3.2"
description = "A tool to build a searchable knowledge graph from Python repositories"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
readme = "README.md"
homepage = "https://github.com/Flux-Frontiers/code_kg"
repository = "https://github.com/Flux-Frontiers/code_kg"
keywords = ["knowledge-graph", "code-analysis", "ast", "lancedb", "sqlite", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "code_kg", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lancedb = ">=0.29.0"
numpy = ">=1.24.0"
sentence-transformers = ">=2.7.0"
streamlit = ">=1.35.0"
pyvis = ">=0.3.2"
pandas = ">=2.0.0"
rich = "^14.3.3"


[tool.poetry.dependencies.mcp]
version = ">=1.0.0"
optional = true

[tool.poetry.dependencies.pyvista]
version = ">=0.44.0"
optional = true
extras = ["jupyter"]

[tool.poetry.dependencies.pyvistaqt]
version = ">=0.11.0"
optional = true

[tool.poetry.dependencies.PyQt5]
version = ">=5.15.0"
optional = true

[tool.poetry.dependencies.param]
version = ">=2.0.0"
optional = true

[tool.poetry.dependencies.markdown]
version = ">=3.6"
optional = true

[tool.poetry.dependencies.trame-vtk]
version = ">=2.0.0"
optional = true

[tool.poetry.extras]
mcp   = ["mcp"]
viz3d = ["pyvista", "pyvistaqt", "PyQt5", "param", "markdown", "trame-vtk"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = "^4.5.1"
detect-secrets = "^1.5.0"


[tool.poetry.scripts]
codekg-build-sqlite  = "code_kg.build_codekg_sqlite:main"
codekg-build-lancedb = "code_kg.build_codekg_lancedb:main"
codekg-query         = "code_kg.codekg_query:main"
codekg-pack          = "code_kg.codekg_snippet_packer:main"
codekg-viz           = "code_kg.codekg_viz:main"
codekg-mcp           = "code_kg.mcp_server:main"
codekg-analyze       = "code_kg.codekg_thorough_analysis:cli"
codekg-viz3d         = "code_kg.codekg_viz3d:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
